--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-autosuggest": "^10.0.4",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-strap": "0.0.1",
     "reactstrap": "^8.7.1",
